# TextToSpeechAndSpeechToText

./: pyproject.toml
STT/: stt.py
TTS/: tts.py
